--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -70,7 +70,7 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 1.56;
-  color: var(--primary-bg-color);
+  color: $bg-color;
 
   letter-spacing: 0.03em;
 
