--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,5 +1,5 @@
 .section-team {
-  background-color: var(--portfolio-filter-button);
+  background-color: $iconbg-color;
   padding-bottom: 94px;
   padding-top: 94px;
 
