--- a/sass/layout/footer/_footer-left.scss
+++ b/sass/layout/footer/_footer-left.scss
@@ -18,7 +18,7 @@
 
   .footer-contacts {
     text-decoration: none;
-    color: var(--primary-text-color);
+    color: $primary-color;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
