--- a/sass/utils/_footer-title.scss
+++ b/sass/utils/_footer-title.scss
@@ -6,6 +6,6 @@
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.03em;
-  color: var(--primary-bg-color);
+  color: $bg-color;
   text-transform: uppercase;
 }
