--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,3 @@
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --primary-bg-color: #ffffff;
-}
-
 .list {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -17,8 +10,8 @@
 }
 
 .page {
-  background-color: var(--primary-bg-color);
-  color: var(--primary-text-color);
+  background-color: #ffffff;
+  color: #757575;
   margin: 0px;
   font-family: roboto, sans-serif;
 }
@@ -40,29 +33,6 @@
   box-sizing: border-box;
   margin-top: 0px;
   margin-bottom: 0px;
-}
-
-/* Site nav */
-.site-nav-link {
-  color: var(--title-text-color);
-}
-
-.site-nav .current {
-  color: var(--accent-color);
-}
-
-.site-nav-link:hover,
-.site-nav-link:focus {
-  color: var(--accent-color);
-}
-
-.site-nav-right-link {
-  color: var(--primary-text-color);
-}
-
-.site-nav-right-link:hover,
-.site-nav-right-link:focus {
-  color: var(--accent-color);
 }
 
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
@@ -333,6 +303,43 @@ summary {
   display: list-item;
 }
 
+.logo {
+  margin-right: 93px;
+  color: #2196f3;
+  font-family: Raleway;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 3%;
+  text-decoration: none;
+}
+
+.logo-list:not(:last-child) {
+  margin-right: 30px;
+}
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 20px;
+  color: #2196f3;
+  font-family: Raleway;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 3%;
+  text-decoration: none;
+}
+
+.footer-logo-span {
+  color: #ffffff;
+}
+
+.header-logo {
+  color: #212121;
+}
+
+.logo-list:not(:last-child) {
+  margin-right: 30px;
+}
+
 .header {
   width: 100%;
   padding-bottom: 24px;
@@ -379,7 +386,7 @@ summary {
 }
 
 .header .current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .header .current::before {
@@ -408,14 +415,14 @@ summary {
 
 .header .icon {
   margin-right: 10px;
-  fill: var(--primary-text-color);
+  fill: #757575;
 }
 
 .header .site-nav-right-link {
   display: flex;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  color: var(--primary-text-color);
+  color: #757575;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -430,39 +437,6 @@ summary {
 
 .header .site-nav-right-link:hover .icon, .header .site-nav-right-link:focus .icon {
   fill: #2196f3;
-}
-
-.logo {
-  margin-right: 93px;
-  color: var(--accent-color);
-  font-family: Raleway;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 3%;
-  text-decoration: none;
-}
-
-.footer-logo-span {
-  color: var(--primary-bg-color);
-}
-
-.footer-logo {
-  display: inline-block;
-  margin-bottom: 20px;
-  color: var(--accent-color);
-  font-family: Raleway;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 3%;
-  text-decoration: none;
-}
-
-.header-logo {
-  color: var(--title-text-color);
-}
-
-.logo-list:not(:last-child) {
-  margin-right: 30px;
 }
 
 .section-services {
@@ -553,11 +527,11 @@ summary {
 }
 
 .clients-logo:hover, .clients-logo:focus {
-  border: 1px var(--accent-color) solid;
+  border: 1px #2196f3 solid;
 }
 
 .clients-logo:hover .clients-svg, .clients-logo:focus .clients-svg {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .clients-svg {
@@ -570,8 +544,8 @@ summary {
   padding: 10px 32px;
   border: none;
   border-radius: 4px;
-  color: var(--primary-bg-color);
-  background-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196f3;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.9;
@@ -580,10 +554,6 @@ summary {
   letter-spacing: 0.06em;
   text-decoration: none;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-}
-
-.button-portfolio :hover {
-  color: var(--accent-color);
 }
 
 .hero {
@@ -641,7 +611,7 @@ summary {
   text-align: left;
   margin-top: 0px;
   margin-bottom: 10px;
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.1;
@@ -668,7 +638,7 @@ summary {
 }
 
 .section-team {
-  background-color: var(--portfolio-filter-button);
+  background-color: #f5f4fa;
   padding-bottom: 94px;
   padding-top: 94px;
 }
@@ -785,7 +755,7 @@ summary {
 
 .footer .footer-contacts {
   text-decoration: none;
-  color: var(--primary-text-color);
+  color: #757575;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
@@ -826,7 +796,7 @@ summary {
 }
 
 .footer-icon .footer-svg {
-  fill: var(--primary-bg-color);
+  fill: #ffffff;
 }
 
 .footer-right {
@@ -876,7 +846,7 @@ summary {
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  color: var(--portfolio-filter-button);
+  color: #f5f4fa;
 }
 
 .adress {
@@ -898,136 +868,6 @@ summary {
   text-decoration: none;
 }
 
-.offer {
-  justify-content: space-between;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.offer a {
-  text-decoration: none;
-}
-
-.offer-item {
-  border: 1px solid #eeeeee;
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-
-.offer-item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.offer-item:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.offer-item:hover .offer-overlay::before,
-.offer-item:hover .offer-overlay-text-container {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.offer-overlay {
-  display: flex;
-  position: relative;
-  overflow: hidden;
-}
-
-.offer-overlay:before {
-  display: inline-block;
-  position: absolute;
-  content: '';
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  opacity: 1;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.offer-title {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: #212121;
-  text-decoration: none;
-  margin: 0;
-}
-
-.offer-overlay-text-container {
-  display: block;
-  position: absolute;
-  justify-content: center;
-  padding: 64px 24px;
-  top: 0;
-  left: 0;
-  width: 322px;
-  height: 168px;
-  align-items: center;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.56;
-  color: var(--primary-bg-color);
-  letter-spacing: 0.03em;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 0;
-}
-
-.offer-text {
-  padding: 20px 24px;
-}
-
-.offer-text p {
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.9px;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-.portfolio {
-  padding-bottom: 94px;
-  padding-top: 94px;
-}
-
-.filter-list {
-  justify-content: center;
-  display: flex;
-  margin-bottom: 50px;
-}
-
-.filter-list-item:not(:last-child) {
-  margin-right: 9px;
-}
-
-.filter-button {
-  padding: 6px 22px;
-  border: 0px;
-  border-radius: 4px;
-  font-family: roboto, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
-  color: #212121;
-  background-color: #f5f4fa;
-}
-
-.filter-button:hover, .filter-button:focus {
-  background-color: #2196f3;
-  color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.hiden-title {
-  display: none;
-}
-
 .footer-center-title,
 .footer-title-right {
   font-weight: bold;
@@ -1036,7 +876,7 @@ summary {
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.03em;
-  color: var(--primary-bg-color);
+  color: #ffffff;
   text-transform: uppercase;
 }
 
@@ -1057,7 +897,7 @@ summary {
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .close-modal {
@@ -1136,7 +976,7 @@ summary {
 
 .contact-form-input:hover, .contact-form-input:focus, .contact-form-message:hover, .contact-form-message:focus {
   outline: none;
-  border-color: var(--accent-color);
+  border-color: #2196f3;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1169,7 +1009,7 @@ summary {
 }
 
 .policy-link {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .text-description {
