--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,28 +1,34 @@
 .logo {
   margin-right: 93px;
-  color: var(--accent-color);
+  color: $accent-color;
   font-family: Raleway;
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 3%;
   text-decoration: none;
+
+  &-list:not(:last-child) {
+    margin-right: 30px;
+  }
 }
-.footer-logo-span {
-  color: var(--primary-bg-color);
-}
+
 .footer-logo {
   display: inline-block;
   margin-bottom: 20px;
-  color: var(--accent-color);
+  color: $accent-color;
   font-family: Raleway;
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 3%;
   text-decoration: none;
+
+  &-span {
+    color: $bg-color;
+  }
 }
 
 .header-logo {
-  color: var(--title-text-color);
+  color: $title-color;
 }
 
 .logo-list:not(:last-child) {
