--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -27,7 +27,7 @@
     text-align: left;
     margin-top: 0px;
     margin-bottom: 10px;
-    color: var(--title-text-color);
+    color: $title-color;
     font-weight: bold;
     font-size: 14px;
     line-height: 1.1;
