--- a/sass/layout/footer/_footer-right.scss
+++ b/sass/layout/footer/_footer-right.scss
@@ -43,5 +43,5 @@
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  color: var(--portfolio-filter-button);
+  color: $iconbg-color;
 }
